tests/ui/rename/rename_not_pair.stderr
error: unexpected meta-item format `Path`, expected `NameValue`
 --> $DIR/rename_not_pair.rs:5:24
  |
5 |     #[shorthand(rename(format))]
  |                        ^^^^^^

error: unexpected meta-item format `List`, expected `NameValue`
 --> $DIR/rename_not_pair.rs:6:24
  |
6 |     #[shorthand(rename(format(xyz)))]
  |                        ^^^^^^^^^^^
